--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--navbar-->
     <header>
         <nav class="navbar navbar-expand-md  fixed-top navbar-custom">
-          <a class="navbar-brand" href="https://jo23542.github.io/homework19/"><img src="./images/Screen Shot 2021-03-30 at 1.22.12 PM.png" alt=""></a>
+          <a class="navbar-brand" href="https://jo23542.github.io/ClassActivity/"><img src="./images/Screen Shot 2021-03-30 at 1.22.12 PM.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
