--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L950BH6P2G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L950BH6P2G');
+</script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,6 +21,8 @@
     <link rel="stylesheet" href="index.css">
     <title>Snowboarding</title>
   </head>
+
+
   <body>
 <!--navbar-->
     <header>
@@ -24,7 +37,7 @@
                 <a class="nav-link" href="https://jo23542.github.io/homework19/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">contact</a>
               </li>
             </ul>
             <form class="form-inline mt-2 mt-md-0">
