--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="https://jo23542.github.io/homework19/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="https://jo23542.github.io/ClassActivity/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">contact</a>
