--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
           <div class="row">
             <div class="col-lg-4">
               <img class="rounded-circle" src="./images/hero 4.jpeg" alt="Generic placeholder image" width="200" height="200">
-              <h2>Lesson 1</h2>
+              <h2>Lesson 1: Get started</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis eligendi nostrum necessitatibus ab temporibus? Voluptatum magnam sequi quam tenetur unde tempora sit ipsam deleniti, dicta veniam iure molestias dolorum laudantium!</p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <p><a class="btn btn-secondary" href="https://jo23542.github.io/CA1/" role="button">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
               <img class="rounded-circle" src="./images/Hero.webp" alt="Generic placeholder image" width="200" height="200">
-              <h2>Lesson 2</h2>
+              <h2>Lesson 2: Similar Sport</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam omnis, asperiores, facere ex esse sed aperiam alias molestias, culpa maiores optio ullam. Ea harum nulla, soluta alias eveniet aspernatur id.</p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <p><a class="btn btn-secondary" href="https://jo23542.github.io/CA2/." role="button">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
               <img class="rounded-circle" src="./images/hero2.jpeg" alt="Generic placeholder image" width="200" height="200">
-              <h2>Lesson 3</h2>
+              <h2>Lesson 3: Ready?</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit exercitationem reprehenderit consequuntur delectus illo consectetur optio at mollitia omnis sequi, cum eaque ad officiis. Ea corporis culpa ut adipisci. Quasi. </p>
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
